Especially long bus stop names could get cut off

--- a/css/index.css
+++ b/css/index.css
@@ -127,7 +127,7 @@ span.th {
 	background-color: #444;
 	border-bottom: .05em solid #111;
 	padding: .4em;
-	width: 12em;
+	width: 13em;
 }
 #wrapper ul#panelwrapper li#bus ul#busList li:last-of-type {
 	border-bottom: none;
